--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,13 @@ venv/
 __pycache__
 phrase_main.py
 words.txt
+archives.py
+assert.py
+comprehensions.py
+debbuging.py
+dictionary.py
+lambdafunc.py
+lists_dict.py
+names.txt
+nuevo_proyecto.py
+numbes.txt
